src/styles.css
body {
  margin: 0;
  font-family:
    -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
  background: #f4f6f8;
}

.container {
  max-width: 100%;
  margin: auto;
}

.card {
  background: white;
  border-radius: 16px;
  padding: 20px;
  margin: 10px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
}

.inner-card {
  background: #c0fae9;
  border-radius: 16px;
  padding: 20px;
  margin: 10px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.06);
}

.title {
  vertical-align: middle;
  top: 9px;
  font-size: 22px;
  font-weight: 600;
  margin-bottom: 20px;
}

.dropdown-select {
  width: 100%;
  padding: 14px 16px;
  border-radius: 12px;
  border: 1px solid #ddd;
  font-size: 16px;
  outline: none;
  background: white;
  color: #222;
  transition: all 0.2s ease;

  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.input {
  width: 100%;
  max-width: 90%;
  padding: 16px;
  border-radius: 12px;
  border: 1px solid #ddd;
  font-size: 16px;
  outline: none;
  background: white;
  color: #222;
  transition: all 0.2s ease;
}

.input:focus {
  border-color: #2e7d32;
  box-shadow: 0 0 0 3px rgba(46, 125, 50, 0.1);
}

.input-group {
  margin-bottom: 18px;
}

.label {
  display: block;
  font-size: 14px;
  color: #555;
  margin-bottom: 6px;
}

.button {
  width: 100%;
  max-width: 90%;
  padding: 14px;
  border: none;
  border-radius: 12px;
  background: #0f479b;
  color: white;
  font-size: 16px;
  font-weight: 600;
  cursor: pointer;
  transition: 0.2s;
}

.button:hover {
  background: #27682b;
}

.button-secondary {
  background: #f0f0f0;
  color: #333;
}

.button-secondary:hover {
  background: #e0e0e0;
}

.select-wrapper {
  position: relative;
}

.select-wrapper::after {
  content: "▾";
  position: absolute;
  right: 14px;
  top: 50%;
  transform: translateY(-50%);
  pointer-events: none;
  color: #666;
  font-size: 14px;
}

.success {
  margin-top: 12px;
  color: #2e7d32;
  font-size: 14px;
}

.list-item {
  text-align: left;
  padding: 3px;
  border-bottom: 1px solid #eee;
}

.vehicle-name {
  font-weight: 600;
  color: #333;
}

.form-row {
  display: flex;
  gap: 8px;
}

/* each column */
.form-col {
  flex: 1;
}

/* 📱 Mobile: stack vertically */
@media (max-width: 768px) {
  .form-row {
    flex-direction: column;
  }
}

.logo {
  height: 100px;
  margin-right: 8px;
}

.log-out-container {
  padding: 10px;
  text-align: right;
}

.log-out-button {
  background: #d32f2f;
  color: white;
  border: none;
  padding: 8px 12px;
  border-radius: 8px;
  font-size: 12px;
  cursor: pointer;
  position: fixed;
  top: 40px;
  left: 79%;
}

.clear-logs-button {
  background: #d32f2f;
  color: white;
  border: none;
  padding: 8px 12px;
  border-radius: 8px;
  font-size: 12px;
  cursor: pointer;
}

.login-button {
  background: #0f479b;
  color: white;
  border: none;
  padding: 14px;
  border-radius: 12px;
  font-size: 16px;
  font-weight: 600;
  cursor: pointer;
  transition: 0.2s;
  width: 105%;
}

